# network_communication

./: CHANGELOG.md  CMakeLists.txt  README.md  package.nom  package.xml
launch/: client.launch  server.launch  start.launch
src/: client.py  server.py
