<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>network_communication</name>
  <version>0.1.0</version>
  <description>
    This package is used as a way for communicating between two cars via
    TCP/IP.

    Example:
    Transfer messages from topic /scan (sensor_msgs/LaserScan) from computer A
    (ip: 192.168.1.2) to topic /scan_other (sensor_msgs/LaserScan) on computer
    B (ip: 192.168.1.3). Run:
     - B: server.py 192.168.1.3 22222 /scan_other 2048 sensor_msgs/LaserScan
     - A: client.py 192.168.1.3 22222 /scan sensor_msgs/LaserScan
  </description>

  <maintainer email="f1tenth@rtime.felk.cvut.cz">F1tenth CTU Community</maintainer>

  <license>GPLv3</license>

  <author email="klapajar@fel.cvut.cz">Jaroslav Klapálek</author>

  <url type="repository">https://github.com/CTU-F1T/network_communication</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- build_depend libraries -->

  <!-- exec_depend libraries -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rostopic</exec_depend>

  <!-- exec_depend message types -->
</package>
